examples/test/testpolicy13958.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13958
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key40: value37
      key20: value43
      key32: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value23
          key18: value16
      podSelector:
        matchLabels:
          key42: value25
          key26: value47
